--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-scrape": "node scripts/test-scrape.mjs"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^143.0.4",
     "@swc/helpers": "^0.5.17",
     "@types/archiver": "^6.0.3",
     "archiver": "^7.0.1",
